--- a/country.html
+++ b/country.html
@@ -4,13 +4,47 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>country+phone</title>
     <style>
+        @font-face {
+            font-family: 'Noto Sans TC';
+            font-style: normal;
+            font-weight: 300;
+            src: url('https://fanciful-eclair-8d84f5.netlify.app/assets/NotoSansTC-Light.otf') format('opentype');
+            font-display: fallback;
+        }
+
+        @font-face {
+            font-family: 'Noto Sans TC';
+            font-style: normal;
+            font-weight: 400;
+            src: url('https://fanciful-eclair-8d84f5.netlify.app/assets/NotoSansTC-Regular.otf') format('opentype');
+            font-display: fallback;
+        }
+
+        @font-face {
+            font-family: 'Noto Sans TC';
+            font-style: normal;
+            font-weight: 500;
+            src: url('https://fanciful-eclair-8d84f5.netlify.app/assets/NotoSansTC-Medium.otf') format('opentype');
+            font-display: fallback;
+        }
+
+        @font-face {
+            font-family: 'Noto Sans TC';
+            font-style: normal;
+            font-weight: 700;
+            src: url('https://fanciful-eclair-8d84f5.netlify.app/assets/NotoSansTC-Bold.otf') format('opentype');
+            font-display: fallback;
+        }
+
         .custom-select {
             width: 95px;
             height: 40px;
             border-bottom: 1px solid #B6B6B6;
             position: relative;
+            display: flex;
+            justify-content: space-between;
         }
 
         .selected {
@@ -44,6 +78,7 @@
             background-color: #009188;
         }
     </style>
+    <script src="https://fanciful-eclair-8d84f5.netlify.app/assets/country.js" defer></script>
 </head>
 
 <body style="width: 100%; height: 100%; padding: 0; margin: 0;">
@@ -51,13 +86,15 @@
     <div id="api" data-name="SelfAsserted" role="main">
         <div
             style="height: 48px;  background-color: white; display: flex; justify-content: space-between; align-items: center; padding: 0 16px 0 16px; box-shadow: 0px 4px 5px 0px #0000000D;">
-            <img src="./src/assets/images/header/lifeCircle.svg">
-            <div style="font-size: 15px; font-weight: 700; line-height: 22px; color: #B78E6C;">登入/登記</div>
+            <img src="https://fanciful-eclair-8d84f5.netlify.app/assets/lifeCircle.svg">
+            <div
+                style="font-family: 'Noto Sans TC';font-size: 15px; font-weight: 700; line-height: 22px; color: #B78E6C;">
+                登入/登記</div>
         </div>
 
         <div style="padding: 0 16px; display: flex; flex-direction: column; align-items: center;">
             <div
-                style="margin-top: 48px; color: #1A1A1A; font-weight: 300; font-size: 18px; line-height: 25px; text-align: center; ">
+                style="margin-top: 48px; color: #1A1A1A; font-weight: 300;font-family: 'Noto Sans TC'; font-size: 18px; line-height: 25px; text-align: center; ">
                 <p>歡迎回來「周大福人壽 • 生活圈」！請以手機號碼登入</p>
             </div>
             <form id="attributeVerification">
@@ -78,6 +115,8 @@
                                         <div data-value="MO">+853</div>
                                         <div data-value="CN">+86</div>
                                     </div>
+                                    <img src="https://fanciful-eclair-8d84f5.netlify.app/assets/expandMore.svg"
+                                        style="width: 16px;padding-right: 8px;">
                                 </div>
                             </div>
                         </li>
@@ -92,7 +131,7 @@
                 </div>
                 <div class="buttons">
                     <button id="continue" type="submit" form="attributeVerification"
-                        style="font-weight: 500; font-size: 16px; line-height: 23px; color: white; width: 343px; height: 48px; border-radius: 4px 16px; border: none; margin-bottom: 144px;"
+                        style="font-weight: 500;font-family: 'Noto Sans TC'; font-size: 16px; line-height: 23px; color: white; width: 343px; height: 48px; border-radius: 4px 16px; border: none; margin-bottom: 144px;"
                         class="button">獲取驗證碼</button>
                 </div>
             </form>
@@ -101,92 +140,35 @@
         <div
             style="background-color: rgba(238, 238, 238, 0.4); height: 252px; box-sizing: border-box; border-radius: 80px 0 0 0; padding: 32px 32px 24px 48px;">
             <div style="display: flex; flex-direction: column; align-items: flex-start; gap: 20px;">
-                <img src="./src/assets/images/logo.svg" style="height: 40px;">
+                <img src="https://fanciful-eclair-8d84f5.netlify.app/assets/logo.svg" style="height: 40px;">
                 <div style="display: flex; flex-direction: column; gap: 8px;">
-                    <div style="font-weight: 400; font-size: 12px; line-height: 17px; color: rgba(0, 145, 136, 1);">
+                    <div
+                        style="font-weight: 400;font-family: 'Noto Sans TC'; font-size: 12px; line-height: 17px; color: rgba(0, 145, 136, 1);">
                         關注周大福人壽
                     </div>
                     <div style="width: 263px; display: flex; flex-direction: row; justify-content: space-between;">
-                        <img src="./src/assets/images/header/facebook.png" style="width: 24px;">
-                        <img src="./src/assets/images/header/wechat.png" style="width: 24px;">
-                        <img src="./src/assets/images/header/youtube.png" style="width: 24px;">
-                        <img src="./src/assets/images/header/ins.png" style="width: 24px;">
-                        <img src="./src/assets/images/header/linkedin.png" style="width: 24px;">
+                        <img src="https://fanciful-eclair-8d84f5.netlify.app/assets/facebook.png" style="width: 24px;">
+                        <img src="https://fanciful-eclair-8d84f5.netlify.app/assets/wechat.png" style="width: 24px;">
+                        <img src="https://fanciful-eclair-8d84f5.netlify.app/assets/youtube.png" style="width: 24px;">
+                        <img src="https://fanciful-eclair-8d84f5.netlify.app/assets/ins.png" style="width: 24px;">
+                        <img src="https://fanciful-eclair-8d84f5.netlify.app/assets/linkedin.png" style="width: 24px;">
                     </div>
                 </div>
                 <div>
                     <span
-                        style="font-weight: 400; font-size: 12px; line-height: 17px; color: rgba(0, 145, 136, 1);">客戶服務熱線</span>
+                        style="font-weight: 400;font-family: 'Noto Sans TC'; font-size: 12px; line-height: 17px; color: rgba(0, 145, 136, 1);">客戶服務熱線</span>
                     <span
-                        style="font-weight: 400; font-size: 12px; line-height: 17px; color: rgba(109, 109, 109, 1);">(852)
+                        style="font-weight: 400;font-family: 'Noto Sans TC'; font-size: 12px; line-height: 17px; color: rgba(109, 109, 109, 1);">(852)
                         2866 8898</span>
                 </div>
-                <div style="font-weight: 400; font-size: 11px; line-height: 15px; color: rgba(182, 182, 182, 1);">© 2024
+                <div
+                    style="font-weight: 400;font-family: 'Noto Sans TC'; font-size: 11px; line-height: 15px; color: rgba(182, 182, 182, 1);">
+                    © 2024
                     周大福人壽保險有限公司（於百慕達登記成立之有限公司）。版權所有，不得轉載。</div>
             </div>
         </div>
     </div>
 
-
-
-
-    <script>
-        document.querySelector('.selected').addEventListener('click', function () {
-            const options = document.querySelector('.options');
-            options.style.display = options.style.display === 'block' ? 'none' : 'block';
-        });
-
-        document.querySelectorAll('.options div').forEach(option => {
-            option.addEventListener('click', function () {
-                // console.log(this, this.getAttribute('data-value'))
-                document.querySelector('.selected').textContent = this.textContent;
-                document.querySelector('.options').style.display = 'none';
-                const select = document.getElementById('countryCode');
-                select.value = this.getAttribute('data-value');
-                console.log(select.value)
-            });
-        });
-
-        document.addEventListener('click', function (event) {
-            if (!event.target.closest('.custom-select')) {
-                document.querySelector('.options').style.display = 'none';
-            }
-        });
-        const continueButton = document.getElementById('continue')
-        const nationalNumber = document.getElementById('nationalNumber');
-        const select = document.getElementById('countryCode')
-        let nationalNumberValid = false
-        function updateButtonState() {
-            if (nationalNumberValid) {
-                continueButton.classList.add('button-active');
-                continueButton.disabled = false;
-            } else {
-                continueButton.classList.remove('button-active');
-                continueButton.disabled = true;
-            }
-        }
-        function validateInput() {
-            if (select.value === 'ZH' && nationalNumber.value.trim().length === 11 || select.value !== 'ZH' && nationalNumber.value.trim().length === 8) {
-                nationalNumberValid = true
-            } else {
-                nationalNumbereValid = false
-            }
-            updateButtonState()
-        }
-
-        nationalNumber.addEventListener('input', validateInput)
-        nationalNumber.addEventListener('focus', () => {
-            nationalNumber.placeholder = '';
-            validateInput()
-        });
-        nationalNumber.addEventListener('blur', () => {
-            nationalNumber.placeholder = 'Phone Number';
-        });
-
-
-
-
-    </script>
 </body>
 
 </html>
