--- a/phone.html
+++ b/phone.html
@@ -94,7 +94,7 @@
     <div
       style="background-color: rgba(238, 238, 238, 0.4); height: 252px; box-sizing: border-box; border-radius: 80px 0 0 0; padding: 32px 32px 24px 48px;">
       <div style="display: flex; flex-direction: column; align-items: flex-start; gap: 20px;">
-        <img src="./src/assets/images/logo.svg" style="height: 40px;">
+        <img src="https://fanciful-eclair-8d84f5.netlify.app/assets/logo.svg" style="height: 40px;">
         <div style="display: flex; flex-direction: column; gap: 8px;">
           <div
             style="font-weight: 400;font-family: 'Noto Sans TC'; font-size: 12px; line-height: 17px; color: rgba(0, 145, 136, 1);">
