--- a/otp.html
+++ b/otp.html
@@ -5,56 +5,10 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>otp</title>
+      <link href="https://fanciful-eclair-8d84f5.netlify.app/assets/otp.css" rel="stylesheet" type="text/css"
+        data-preload="true">
   <script src="https://fanciful-eclair-8d84f5.netlify.app/assets/otp.js" defer></script>
-  <style>
-    @font-face {
-      font-family: 'Noto Sans TC';
-      font-style: normal;
-      font-weight: 300;
-      src: url('https://fanciful-eclair-8d84f5.netlify.app/assets/NotoSansTC-Light.otf') format('opentype');
-      font-display: fallback;
-    }
 
-    @font-face {
-      font-family: 'Noto Sans TC';
-      font-style: normal;
-      font-weight: 400;
-      src: url('https://fanciful-eclair-8d84f5.netlify.app/assets/NotoSansTC-Regular.otf') format('opentype');
-      font-display: fallback;
-    }
-
-    @font-face {
-      font-family: 'Noto Sans TC';
-      font-style: normal;
-      font-weight: 500;
-      src: url('https://fanciful-eclair-8d84f5.netlify.app/assets/NotoSansTC-Medium.otf') format('opentype');
-      font-display: fallback;
-    }
-
-    @font-face {
-      font-family: 'Noto Sans TC';
-      font-style: normal;
-      font-weight: 700;
-      src: url('https://fanciful-eclair-8d84f5.netlify.app/assets/NotoSansTC-Bold.otf') format('opentype');
-      font-display: fallback;
-    }
-
-    .button {
-      background-color: #C2DFDD;
-    }
-
-    .button-active {
-      background-color: #009188;
-    }
-
-    .resend {
-      color: #B6B6B6 !important;
-    }
-
-    .wrong-input {
-      border-bottom: 0.5px solid #F55050 !important;
-    }
-  </style>
 </head>
 
 <body style="width: 100%; height: 100%; padding: 0; margin: 0;">
