--- a/phone.html
+++ b/phone.html
@@ -59,35 +59,35 @@
   </div>
 
   <div
-    style="background-color: rgba(238, 238, 238, 0.4); height: 252px; box-sizing: border-box; border-radius: 80px 0 0 0; padding: 32px 32px 24px 48px;">
-    <div style="display: flex; flex-direction: column; align-items: flex-start; gap: 20px;">
-      <img src="./src/assets/images/logo.svg" style="height: 40px;">
-      <div style="display: flex; flex-direction: column; gap: 8px;">
-        <div
-          style="font-weight: 400;font-family: 'Noto Sans TC'; font-size: 12px; line-height: 17px; color: rgba(0, 145, 136, 1);">
-          關注周大福人壽
+        style="background-color: rgba(238, 238, 238, 0.4); height: 252px; box-sizing: border-box; border-radius: 80px 0 0 0; padding: 32px 32px 24px 48px;">
+        <div style="display: flex; flex-direction: column; align-items: flex-start; gap: 20px;">
+            <img src="https://fanciful-eclair-8d84f5.netlify.app/assets/logo.svg" style="height: 40px;">
+            <div style="display: flex; flex-direction: column; gap: 8px;">
+                <div
+                    style="font-weight: 400;font-family: 'Noto Sans TC'; font-size: 12px; line-height: 17px; color: rgba(0, 145, 136, 1);">
+                    關注周大福人壽
+                </div>
+                <div style="width: 263px; display: flex; flex-direction: row; justify-content: space-between;">
+                    <img src="https://fanciful-eclair-8d84f5.netlify.app/assets/facebook.png" style="width: 24px;">
+                    <img src="https://fanciful-eclair-8d84f5.netlify.app/assets/wechat.png" style="width: 24px;">
+                    <img src="https://fanciful-eclair-8d84f5.netlify.app/assets/youtube.png" style="width: 24px;">
+                    <img src="https://fanciful-eclair-8d84f5.netlify.app/assets/ins.png" style="width: 24px;">
+                    <img src="https://fanciful-eclair-8d84f5.netlify.app/assets/linkedin.png" style="width: 24px;">
+                </div>
+            </div>
+            <div>
+                <span
+                    style="font-weight: 400;font-family: 'Noto Sans TC'; font-size: 12px; line-height: 17px; color: rgba(0, 145, 136, 1);">客戶服務熱線</span>
+                <span
+                    style="font-weight: 400;font-family: 'Noto Sans TC'; font-size: 12px; line-height: 17px; color: rgba(109, 109, 109, 1);">(852)
+                    2866 8898</span>
+            </div>
+            <div
+                style="font-weight: 400;font-family: 'Noto Sans TC'; font-size: 11px; line-height: 15px; color: rgba(182, 182, 182, 1);">
+                © 2024
+                周大福人壽保險有限公司（於百慕達登記成立之有限公司）。版權所有，不得轉載。</div>
         </div>
-        <div style="width: 263px; display: flex; flex-direction: row; justify-content: space-between;">
-          <img src="https://fanciful-eclair-8d84f5.netlify.app/assets/facebook.png" style="width: 24px;">
-          <img src="https://fanciful-eclair-8d84f5.netlify.app/assets/wechat.png" style="width: 24px;">
-          <img src="https://fanciful-eclair-8d84f5.netlify.app/assets/youtube.png" style="width: 24px;">
-          <img src="https://fanciful-eclair-8d84f5.netlify.app/assets/ins.png" style="width: 24px;">
-          <img src="https://fanciful-eclair-8d84f5.netlify.app/assets/linkedin.png" style="width: 24px;">
-        </div>
-      </div>
-      <div>
-        <span
-          style="font-weight: 400; font-family: 'Noto Sans TC';font-size: 12px; line-height: 17px; color: rgba(0, 145, 136, 1);">客戶服務熱線</span>
-        <span
-          style="font-weight: 400;font-family: 'Noto Sans TC'; font-size: 12px; line-height: 17px; color: rgba(109, 109, 109, 1);">(852)
-          2866 8898</span>
-      </div>
-      <div
-        style="font-weight: 400;font-family: 'Noto Sans TC'; font-size: 11px; line-height: 15px; color: rgba(182, 182, 182, 1);">
-        © 2024
-        周大福人壽保險有限公司（於百慕達登記成立之有限公司）。版權所有，不得轉載。</div>
     </div>
-  </div>
 
 
 </body>
