--- a/phone.html
+++ b/phone.html
@@ -14,8 +14,12 @@
   <div
     style="height: 48px;  background-color: white; display: flex; justify-content: space-between; align-items: center; padding: 0 16px 0 16px; box-shadow: 0px 4px 5px 0px #0000000D;">
     <img src="https://fanciful-eclair-8d84f5.netlify.app/assets/lifeCircle.svg">
-    <a style="font-family: 'Noto Sans TC';font-size: 15px; font-weight: 700; line-height: 22px; color: #B78E6C; text-decoration: none;"
-      href="https://circledev.uatctflife.com.hk/en/entry">登入/登記</a>
+    <div style="font-family: 'Noto Sans TC';font-size: 15px; font-weight: 700; line-height: 22px; color: #B78E6C;"
+      class="imprint imprint-tc">
+      登入/登記</div>
+    <div style="font-family: 'Noto Sans TC';font-size: 15px; font-weight: 700; line-height: 22px; color: #B78E6C;"
+      class="imprint imprint-en">
+      Log in/Register</div>
   </div>
 
   <div id="api" data-name="Unified" role="main">
@@ -59,35 +63,46 @@
   </div>
 
   <div
-        style="background-color: rgba(238, 238, 238, 0.4); height: 252px; box-sizing: border-box; border-radius: 80px 0 0 0; padding: 32px 32px 24px 48px;">
-        <div style="display: flex; flex-direction: column; align-items: flex-start; gap: 20px;">
-            <img src="https://fanciful-eclair-8d84f5.netlify.app/assets/logo.svg" style="height: 40px;">
-            <div style="display: flex; flex-direction: column; gap: 8px;">
-                <div
-                    style="font-weight: 400;font-family: 'Noto Sans TC'; font-size: 12px; line-height: 17px; color: rgba(0, 145, 136, 1);">
-                    關注周大福人壽
-                </div>
-                <div style="width: 263px; display: flex; flex-direction: row; justify-content: space-between;">
-                    <img src="https://fanciful-eclair-8d84f5.netlify.app/assets/facebook.png" style="width: 24px;">
-                    <img src="https://fanciful-eclair-8d84f5.netlify.app/assets/wechat.png" style="width: 24px;">
-                    <img src="https://fanciful-eclair-8d84f5.netlify.app/assets/youtube.png" style="width: 24px;">
-                    <img src="https://fanciful-eclair-8d84f5.netlify.app/assets/ins.png" style="width: 24px;">
-                    <img src="https://fanciful-eclair-8d84f5.netlify.app/assets/linkedin.png" style="width: 24px;">
-                </div>
-            </div>
-            <div>
-                <span
-                    style="font-weight: 400;font-family: 'Noto Sans TC'; font-size: 12px; line-height: 17px; color: rgba(0, 145, 136, 1);">客戶服務熱線</span>
-                <span
-                    style="font-weight: 400;font-family: 'Noto Sans TC'; font-size: 12px; line-height: 17px; color: rgba(109, 109, 109, 1);">(852)
-                    2866 8898</span>
-            </div>
-            <div
-                style="font-weight: 400;font-family: 'Noto Sans TC'; font-size: 11px; line-height: 15px; color: rgba(182, 182, 182, 1);">
-                © 2024
-                周大福人壽保險有限公司（於百慕達登記成立之有限公司）。版權所有，不得轉載。</div>
+    style="background-color: rgba(238, 238, 238, 0.4); height: 252px; box-sizing: border-box; border-radius: 80px 0 0 0; padding: 32px 32px 24px 48px;">
+    <div style="display: flex; flex-direction: column; align-items: flex-start; gap: 20px;">
+      <img src="https://fanciful-eclair-8d84f5.netlify.app/assets/logo.svg" style="height: 40px;">
+      <div style="display: flex; flex-direction: column; gap: 8px;">
+        <div class="imprint imprint-tc"
+          style="font-weight: 400;font-family: 'Noto Sans TC'; font-size: 12px; line-height: 17px; color: rgba(0, 145, 136, 1);">
+          關注周大福人壽
         </div>
+        <div class="imprint imprint-en"
+          style="font-weight: 400;font-family: 'Noto Sans TC'; font-size: 12px; line-height: 17px; color: rgba(0, 145, 136, 1);">
+          Follow CTF Life
+        </div>
+        <div style="width: 263px; display: flex; flex-direction: row; justify-content: space-between;">
+          <img src="https://fanciful-eclair-8d84f5.netlify.app/assets/facebook.png" style="width: 24px;">
+          <img src="https://fanciful-eclair-8d84f5.netlify.app/assets/wechat.png" style="width: 24px;">
+          <img src="https://fanciful-eclair-8d84f5.netlify.app/assets/youtube.png" style="width: 24px;">
+          <img src="https://fanciful-eclair-8d84f5.netlify.app/assets/ins.png" style="width: 24px;">
+          <img src="https://fanciful-eclair-8d84f5.netlify.app/assets/linkedin.png" style="width: 24px;">
+        </div>
+      </div>
+      <div>
+        <span class="imprint imprint-tc"
+          style="font-weight: 400;font-family: 'Noto Sans TC'; font-size: 12px; line-height: 17px; color: rgba(0, 145, 136, 1);">客戶服務熱線</span>
+        <span class="imprint imprint-en"
+          style="font-weight: 400;font-family: 'Noto Sans TC'; font-size: 12px; line-height: 17px; color: rgba(0, 145, 136, 1);">Customer
+          Service:</span>
+        <span
+          style="font-weight: 400;font-family: 'Noto Sans TC'; font-size: 12px; line-height: 17px; color: rgba(109, 109, 109, 1);">(852)
+          2866 8898</span>
+      </div>
+      <div class="imprint imprint-tc"
+        style="font-weight: 400;font-family: 'Noto Sans TC'; font-size: 11px; line-height: 15px; color: rgba(182, 182, 182, 1);">
+        © 2024
+        周大福人壽保險有限公司（於百慕達登記成立之有限公司）。版權所有，不得轉載。</div>
+      <div class="imprint imprint-en"
+        style="font-weight: 400;font-family: 'Noto Sans TC'; font-size: 11px; line-height: 15px; color: rgba(182, 182, 182, 1);">
+        © 2024 Chow Tai Fook Life Insurance Company Limited (Incorporated in Bermuda with limited liability).
+        All rights reserved.</div>
     </div>
+  </div>
 
 
 </body>
