--- a/country.html
+++ b/country.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>country+phone</title>
-    <link href="./country.css" rel="stylesheet" type="text/css" data-preload="true">
-    <script src="./country.js" defer></script>
+    <link href="https://fanciful-eclair-8d84f5.netlify.app/assets/country.css" rel="stylesheet" type="text/css" data-preload="true">
+    <script src="https://fanciful-eclair-8d84f5.netlify.app/assets/country.js" defer></script>
 </head>
 
 <body style="width: 100%; height: 100%; padding: 0; margin: 0;">
