--- a/phone.html
+++ b/phone.html
@@ -15,10 +15,10 @@
     style="height: 48px;  background-color: white; display: flex; justify-content: space-between; align-items: center; padding: 0 16px 0 16px; box-shadow: 0px 4px 5px 0px #0000000D;">
     <img src="https://fanciful-eclair-8d84f5.netlify.app/assets/lifeCircle.svg">
     <div style="font-family: 'Noto Sans TC';font-size: 15px; font-weight: 700; line-height: 22px; color: #B78E6C;"
-      class="imprint imprint-tc">
+      class="imprint imprint-tc" onclick="navigate(1)">
       登入/登記</div>
     <div style="font-family: 'Poppins';font-size: 15px; font-weight: 700; line-height: 22px; color: #B78E6C;"
-      class="imprint imprint-en">
+      class="imprint imprint-en" onclick="navigate(1)">
       Log in/Register</div>
   </div>
 
@@ -75,11 +75,16 @@
           Follow CTF Life
         </div>
         <div style="width: 263px; display: flex; flex-direction: row; justify-content: space-between;">
-          <img src="https://fanciful-eclair-8d84f5.netlify.app/assets/facebook.png" style="width: 24px;">
-          <img src="https://fanciful-eclair-8d84f5.netlify.app/assets/wechat.png" style="width: 24px;">
-          <img src="https://fanciful-eclair-8d84f5.netlify.app/assets/youtube.png" style="width: 24px;">
-          <img src="https://fanciful-eclair-8d84f5.netlify.app/assets/ins.png" style="width: 24px;">
-          <img src="https://fanciful-eclair-8d84f5.netlify.app/assets/linkedin.png" style="width: 24px;">
+          <img src="https://fanciful-eclair-8d84f5.netlify.app/assets/facebook.png" style="width: 24px;"
+            onclick="navigate(2)">
+          <img src="https://fanciful-eclair-8d84f5.netlify.app/assets/wechat.png" style="width: 24px;"
+            onclick="navigate(3)">
+          <img src="https://fanciful-eclair-8d84f5.netlify.app/assets/youtube.png" style="width: 24px;"
+            onclick="navigate(4)">
+          <img src="https://fanciful-eclair-8d84f5.netlify.app/assets/ins.png" style="width: 24px;"
+            onclick="navigate(5)">
+          <img src="https://fanciful-eclair-8d84f5.netlify.app/assets/linkedin.png" style="width: 24px;"
+            onclick="navigate(6)">
         </div>
       </div>
       <div>
