--- a/phone.html
+++ b/phone.html
@@ -5,15 +5,15 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>login phone</title>
-  <link href="https://fanciful-eclair-8d84f5.netlify.app/assets/phone.css" rel="stylesheet" type="text/css"
+  <link href="./assets/phone.css" rel="stylesheet" type="text/css"
     data-preload="true" />
-  <script src="https://fanciful-eclair-8d84f5.netlify.app/assets/phone.js" defer></script>
+  <script src="./assets/phone.js" defer></script>
 </head>
 
 <body style="height: 100%; width: 100%; padding: 0; margin: 0;">
   <div
     style="height: 48px;  background-color: white; display: flex; justify-content: space-between; align-items: center; padding: 0 16px 0 16px; box-shadow: 0px 4px 5px 0px #0000000D;">
-    <img src="https://fanciful-eclair-8d84f5.netlify.app/assets/lifeCircle.svg">
+    <img src="./assets/lifeCircle.svg">
     <div style="font-family: 'Noto Sans TC';font-size: 15px; font-weight: 700; line-height: 22px; color: #B78E6C;"
       class="imprint imprint-tc" onclick="navigate(1)">
       登入/登記</div>
